Fix overflow height

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/dashboard/stage_overview/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/dashboard/stage_overview/index.scss
@@ -245,7 +245,7 @@ $building: #ffc11b;
 }
 
 .table-body {
-  max-height: 300px;
+  max-height: 318px;
   overflow-x: hidden;
   overflow-y: scroll;
 }
